# dpsim

./: .coveragerc  .gitignore  CMakeLists.txt  Plot.ipynb  build-9bus.sh  build-dpsim.sh  build.sh  candidate_reconstruct_first_harmonic.py  compare_threephase_dp_reconstruction.py  dp_roundtrip_study.md  extract_roundtrip_lowfreq.py  hilbert_sfa_study.py  others.sh  plot_cosim_interface.py  plot_dp_vs_villas_internal.py  plot_threephase_dp_comparison.py  plot_threephase_roundtrip.py  reconstruct_emt_from_dp.py  requirements.txt  run_9bus.sh  run_alt.sh  run_cosim.sh  run_example.sh  run_inf.sh  run_nort.sh  run_test.sh  run_tests.sh  setup_cs.sh  setup_rt.sh  study_villas_dp_behavior.py  villas-conf.conf  villas-conf2.conf
.devcontainer/: devcontainer.json
.github/workflows/: build_test_linux_fedora.yaml  build_test_linux_rocky_profiling.yaml
cmake/: FindCIMpp.cmake  FindVILLASnode.cmake
configs/: run-basics-cosim.sh  run-emt-dp-cosim.sh  villas-conf2-threephase-dp.conf  villas-conf2-threephase-roundtrip.conf  villas-dp-to-emt.conf  villas-emt-dp-basics.conf  villas-emt-dp-cosim.conf  villas-emt-to-dp.conf
docs/hugo/: package-lock.json  package.json
dpsim/: CMakeLists.txt
dpsim-models/: CMakeLists.txt
dpsim-models/include/dpsim-models/: Components.h  Factory.h  Logger.h  SimNode.h  TopologicalNode.h
dpsim-models/include/dpsim-models/Base/: Base_Exciter.h  Base_Ph1_Transformer.h  Base_ReducedOrderSynchronGenerator.h  Base_SynchronGenerator.h
dpsim-models/include/dpsim-models/CIM/: CIMFormatter.h  Reader.h
dpsim-models/include/dpsim-models/DP/: DP_Ph1_ControlledCurrentSource.h  DP_Ph1_Resistor.h  DP_Ph1_VariableResistor.h  DP_Ph3_Resistor.h  DP_Ph3_VariableResistor.h
dpsim-models/include/dpsim-models/EMT/: EMT_Ph1_Resistor.h  EMT_Ph1_VariableResistor.h  EMT_Ph3_ControlledCurrentSource.h  EMT_Ph3_ControlledVoltageSource.h  EMT_Ph3_PiLine.h  (+4 more)
dpsim-models/src/: CMakeLists.txt  Graph.cpp  SimNode.cpp
dpsim-models/src/Base/: Base_ReducedOrderSynchronGenerator.cpp  Base_SynchronGenerator.cpp
dpsim-models/src/CIM/: Reader.cpp
dpsim-models/src/DP/: DP_Ph1_ControlledCurrentSource.cpp  DP_Ph1_Resistor.cpp  DP_Ph1_VariableResistor.cpp  DP_Ph3_Resistor.cpp  DP_Ph3_VariableResistor.cpp
dpsim-models/src/EMT/: EMT_Ph1_Resistor.cpp  EMT_Ph1_VariableResistor.cpp  EMT_Ph3_ControlledCurrentSource.cpp  EMT_Ph3_ControlledVoltageSource.cpp  EMT_Ph3_CurrentSource.cpp  EMT_Ph3_PiLine.cpp  EMT_Ph3_Resistor.cpp  EMT_Ph3_Transformer.cpp  EMT_Ph3_VariableResistor.cpp
dpsim-models/src/SP/: SP_Ph1_NetworkInjection.cpp  SP_Ph1_Resistor.cpp  SP_Ph1_Shunt.cpp  SP_Ph1_Transformer.cpp  SP_Ph1_VariableResistor.cpp  SP_Ph3_Resistor.cpp  SP_Ph3_VariableResistor.cpp
dpsim-models/src/Signal/: ExciterDC1.cpp  ExciterDC1Simp.cpp  ExciterST1Simp.cpp  ExciterStatic.cpp
dpsim-villas/: CMakeLists.txt
dpsim-villas/examples/cxx/: CMakeLists.txt  DP_Ph1_9bus_4order_RT_cosim_main.cpp  DP_Ph1_9bus_4order_cosim_follower.cpp  EMT_Ph3_9bus_4order_cosim.cpp  EMT_Ph3_9bus_load6_cosim_leader.cpp  EMT_Ph3_simple_cosim_baseline.cpp  EMT_Ph3_simple_cosim_follower.cpp  EMT_Ph3_simple_cosim_follower_active_sync.cpp  EMT_Ph3_simple_cosim_follower_sync.cpp  EMT_Ph3_simple_cosim_follower_v2.cpp  EMT_Ph3_simple_cosim_follower_v2_sync.cpp  EMT_Ph3_simple_cosim_follower_v3.cpp  EMT_Ph3_simple_cosim_leader.cpp  EMT_Ph3_simple_cosim_leader_passive_sync.cpp  EMT_Ph3_simple_cosim_leader_sync.cpp  EMT_Ph3_simple_cosim_leader_v2.cpp  EMT_Ph3_simple_cosim_leader_v2_sync.cpp  Fpga9BusHil.cpp  FpgaCosim3PhInfiniteBus.cpp  FpgaCosimulation.cpp  SharedMemExample.cpp  cosim-9bus-4order.cpp  cosim-test.cpp
dpsim-villas/examples/cxx/cosim/: DP_Ph1_9bus_4order_cosim_follower.cpp  EMT_Ph3_9bus_load6_cosim_leader.cpp
dpsim-villas/examples/cxx/cosim/basics/: CosimBasics.h  DPDP_simple_cosim_follower_Isrc.cpp  DPDP_simple_cosim_follower_Vsrc.cpp  DPDP_simple_cosim_leader_Isrc.cpp  DPDP_simple_cosim_leader_Vsrc.cpp  DPEMT_simple_cosim_follower_Isrc.cpp  DPEMT_simple_cosim_follower_Vsrc.cpp  DPEMT_simple_cosim_leader_Isrc.cpp  DPEMT_simple_cosim_leader_Vsrc.cpp  EMTDP_simple_cosim_follower_Isrc.cpp  EMTDP_simple_cosim_follower_Vsrc.cpp  EMTDP_simple_cosim_leader_Isrc.cpp  EMTDP_simple_cosim_leader_Vsrc.cpp  EMTEMT_simple_cosim_follower_Isrc.cpp  EMTEMT_simple_cosim_follower_Vsrc.cpp  EMTEMT_simple_cosim_leader_Isrc.cpp  EMTEMT_simple_cosim_leader_Vsrc.cpp
dpsim-villas/examples/include/: GridParameters.h
dpsim-villas/include/dpsim-villas/: Config.h.in  Interfaces.h
dpsim-villas/src/: CMakeLists.txt  InterfaceVillasQueueless.cpp
dpsim/examples/cxx/: CMakeLists.txt  Examples.h
dpsim/examples/cxx/CIM/: CGMES_CIM_PF.cpp
dpsim/examples/cxx/Circuits/: DP_9bus_4order.cpp  DP_9bus_4order_RT.cpp  DP_Ph1_9bus_4order.cpp  DP_ReducedOrderSG_VBR_Load_Fault.cpp  EMT_9bus_4order.cpp  EMT_Ph3_9bus_4order.cpp  EMT_ReducedOrderSG_VBR_Load_Fault.cpp  EMT_cosim_9bus_4order.cpp  SP_ReducedOrderSG_SMIB_Fault.cpp  SP_ReducedOrderSG_VBR_Load_Fault.cpp
dpsim/examples/cxx/Components/: EMT_SynchronGenerator9OrderVBR_LoadStep_TurbineGovernor_Exciter.cpp
dpsim/examples/cxx/RealTime/: DP_Ph1_9bus_4order_RT.cpp
dpsim/include/dpsim/: InterfaceCosimSyncShmem.h  RealTimeDataLogger.h  RealTimeSimulation.h  ThreadLevelScheduler.h  ThreadScheduler.h
dpsim/src/: CMakeLists.txt  DataLogger.cpp  InterfaceCosimSyncShmem.cpp  PFSolver.cpp  RealTimeDataLogger.cpp  RealTimeSimulation.cpp  ThreadLevelScheduler.cpp  ThreadScheduler.cpp
dpsim/src/pybind/: EMTComponents.cpp  SPComponents.cpp  SignalComponents.cpp  main.cpp
examples/Notebooks/Circuits/: EMT_9bus_4order.ipynb  EMT_Slack_PiLine_VSI_with_PF_Init.ipynb
examples/Notebooks/Components/: Line.ipynb
examples/Notebooks/Features/: CosimNineBusDPEMT.ipynb
examples/Notebooks/Villas/: EMT_Ph3_simple_cosim_follower_v2.ipynb  EMT_Ph3_simple_cosim_follower_v2.py  EMT_Ph3_simple_cosim_leader_v2.ipynb  EMT_Ph3_simple_cosim_leader_v2.py
packaging/Docker/: Dockerfile.dev-debian
snap/: snapcraft.yaml
tools/: CMakeLists.txt
tools/cosimcmd/: CMakeLists.txt
tools/cosimcmd/src/: main.cpp
(+16 files in other folders)
